arreglo bug de visualización en misFavoritos para la version mobile

--- a/frontend/PI_G6/src/components/favorites/Favorites.module.css
+++ b/frontend/PI_G6/src/components/favorites/Favorites.module.css
@@ -27,7 +27,7 @@
 }
 
 .cardContainer > section {
-  grid-template-rows: repeat(1, 200px);
+  grid-template-rows: repeat(1, 250px);
 }
 
 .favContainerHome .favHeader {
@@ -115,6 +115,6 @@
 
 @media only screen and (max-width: 600px) {
   .favContainer {
-    padding: 50px 0;
+    padding: 30px;
   }
 }
